@@ -15,16 +15,15 @@
  */
 package ghidra.program.model.pcode;
 
+import static ghidra.program.model.pcode.AttributeId.*;
+import static ghidra.program.model.pcode.ElementId.*;
+
 import java.util.*;
 
 import ghidra.program.model.address.*;
 import ghidra.program.model.data.DataType;
-import ghidra.program.model.lang.UnknownInstructionException;
 import ghidra.program.model.listing.VariableStorage;
 import ghidra.util.exception.InvalidInputException;
-import ghidra.util.xml.SpecXmlUtils;
-import ghidra.xml.XmlElement;
-import ghidra.xml.XmlPullParser;
 
 /**
  * 
@@ -35,9 +34,10 @@ public class PcodeSyntaxTree implements PcodeFactory {
 
 	private AddressFactory addrFactory;
 	private PcodeDataTypeManager datatypeManager;
-	private HashMap<Integer, Varnode> refmap;					// Obtain varnode by id
+	private HashMap<Integer, Varnode> refmap;				// Obtain varnode by id
 	private HashMap<Integer, PcodeOp> oprefmap;				// Obtain op by SequenceNumber unique id
-	private HashMap<Integer,VariableStorage> joinmap;			// logical map of joined objects
+	private HashMap<Integer, VariableStorage> joinToStorage;	// map "join" offsets to storage
+	private HashMap<VariableStorage, Integer> storageToJoin;	// map storage to "join" offsets
 	private int joinAllocate;								// next offset to be allocated in join map
 	private PcodeOpBank opbank;
 	private VarnodeBank vbank;
@@ -49,87 +49,47 @@ public class PcodeSyntaxTree implements PcodeFactory {
 		datatypeManager = dtmanage;
 		refmap = null;
 		oprefmap = null;
-		joinmap = null;
+		joinToStorage = null;
+		storageToJoin = null;
 		joinAllocate = 0;
 		opbank = new PcodeOpBank();
 		vbank = new VarnodeBank();
-		bblocks = new ArrayList<PcodeBlockBasic>();
+		bblocks = new ArrayList<>();
 		uniqId = 0;
 	}
 
 	public void clear() {
 		refmap = null;
 		oprefmap = null;
-		joinmap = null;
+		joinToStorage = null;
+		storageToJoin = null;
 		joinAllocate = 0;
 		vbank.clear();
 		opbank.clear();
-		bblocks = new ArrayList<PcodeBlockBasic>();
+		bblocks = new ArrayList<>();
 		uniqId = 0;
 	}
 
-	private static Varnode getVarnodePiece(String pieceStr, AddressFactory addrFactory)
-			throws PcodeXMLException {
-// TODO: Can't handle register name since addrFactory can't handle this
-		String[] varnodeTokens = pieceStr.split(":");
-		if (varnodeTokens.length != 3) {
-			throw new PcodeXMLException("Invalid XML addr piece: " + pieceStr);
-		}
-		AddressSpace space = addrFactory.getAddressSpace(varnodeTokens[0]);
-		if (space == null) {
-			throw new PcodeXMLException("Invalid XML addr, space not found: " + pieceStr);
-		}
-		if (!varnodeTokens[1].startsWith("0x")) {
-			throw new PcodeXMLException("Invalid XML addr piece offset: " + pieceStr);
-		}
-		long offset;
-		try {
-			offset = Long.parseUnsignedLong(varnodeTokens[1].substring(2), 16);
-		}
-		catch (NumberFormatException e) {
-			throw new PcodeXMLException("Invalid XML addr piece offset: " + pieceStr);
-		}
-		int size;
-		try {
-			size = Integer.parseInt(varnodeTokens[2]);
-		}
-		catch (NumberFormatException e) {
-			throw new PcodeXMLException("Invalid XML addr piece size: " + pieceStr);
-		}
-		return new Varnode(space.getAddress(offset), size);
-	}
-
-	/**
-	 * Read an XML join address with "piece" attributes
-	 * 
-	 * @param el SAX parse tree element
-	 * @param addr join address associated with pieces
-	 * 
-	 * @return the VariableStorage associated with xml
-	 * @throws PcodeXMLException
-	 * @throws InvalidInputException
-	 */
 	@Override
-	public VariableStorage readXMLVarnodePieces(XmlElement el, Address addr) throws PcodeXMLException, InvalidInputException {
-		ArrayList<Varnode> list = new ArrayList<Varnode>();
-		int index = 1;
-		String nextPiece = "piece" + index;
-		while (el.hasAttribute(nextPiece)) {
-			String pieceStr = el.getAttribute(nextPiece);
-			list.add(getVarnodePiece(pieceStr, addrFactory));
-			nextPiece = "piece" + ++index;
+	public Address getJoinAddress(VariableStorage storage) {
+		if (storageToJoin == null) {
+			return null;
 		}
-		Varnode[] pieces = new Varnode[list.size()];
-		list.toArray(pieces);
-
-		return allocateJoinStorage(addr.getOffset(), pieces);
+		Integer off = storageToJoin.get(storage);
+		if (off == null) {
+			return null;
+		}
+		AddressSpace spc = AddressSpace.VARIABLE_SPACE;
+		return spc.getAddress(off.longValue());
 	}
 
-	private VariableStorage allocateJoinStorage(long offset,Varnode[] pieces) throws InvalidInputException {
+	@Override
+	public VariableStorage getJoinStorage(Varnode[] pieces) throws InvalidInputException {
 		VariableStorage storage;
 		try {
-			storage = new VariableStorage(datatypeManager.getProgram(),pieces);
-		} catch (InvalidInputException e) {
+			storage = new VariableStorage(datatypeManager.getProgram(), pieces);
+		}
+		catch (InvalidInputException e) {
 			storage = null;
 		}
 		if (storage == null) {
@@ -146,46 +106,50 @@ public class PcodeSyntaxTree implements PcodeFactory {
 				sz += piece.getSize();
 			}
 			Address uniqaddr = addrFactory.getUniqueSpace().getAddress(0x20000000);
-			storage = new VariableStorage(datatypeManager.getProgram(),uniqaddr,sz);
+			storage = new VariableStorage(datatypeManager.getProgram(), uniqaddr, sz);
 		}
-		Integer offObject;
+		if (joinToStorage == null) {
+			joinToStorage = new HashMap<>();
+		}
+		if (storageToJoin == null) {
+			storageToJoin = new HashMap<>();
+		}
+		Integer offObject = storageToJoin.get(storage);
+		if (offObject != null) {					// Same storage was previously registered
+			return joinToStorage.get(offObject);	// Use the old version
+		}
+
 		int roundsize = (storage.size() + 15) & 0xfffffff0;
-		if (offset < 0) {
-			offObject = new Integer(joinAllocate);
-			joinAllocate += roundsize;
-		}
-		else {
-			offObject = new Integer((int)offset);
-			offset += roundsize;
-			if (offset > joinAllocate) {
-				joinAllocate = (int)offset;
-			}
-		}
-		if (joinmap == null) {
-			joinmap = new HashMap<Integer,VariableStorage>();
-		}
-		joinmap.put(offObject, storage);
+		offObject = Integer.valueOf(joinAllocate);
+		joinAllocate += roundsize;
+		joinToStorage.put(offObject, storage);
+		storageToJoin.put(storage, offObject);
 		return storage;
 	}
 
 	private VariableStorage findJoinStorage(long offset) {
-		if (joinmap == null) {
+		if (joinToStorage == null) {
 			return null;
 		}
-		return joinmap.get(new Integer((int)offset));
+		return joinToStorage.get(Integer.valueOf((int) offset));
 	}
 
 	@Override
 	public VariableStorage buildStorage(Varnode vn) throws InvalidInputException {
 		Address addr = vn.getAddress();
 		if (addr.getAddressSpace().getType() == AddressSpace.TYPE_VARIABLE) {
-			return findJoinStorage(addr.getOffset());
+			VariableStorage store = findJoinStorage(addr.getOffset());
+			if (store == null) {
+				throw new InvalidInputException(
+					"Missing description of pieces for a varnode in the join address space");
+			}
+			return store;
 		}
-		return new VariableStorage(datatypeManager.getProgram(),vn);
+		return new VariableStorage(datatypeManager.getProgram(), vn);
 	}
 
 	/**
-	 * Returns an iterator for all Varnodes in the tree ordered by Address
+	 * @return an iterator for all Varnodes in the tree ordered by Address
 	 */
 	public Iterator<VarnodeAST> locRange() {
 		return vbank.locRange();
@@ -278,15 +242,6 @@ public class PcodeSyntaxTree implements PcodeFactory {
 		return opbank.findOp(sq);
 	}
 
-	/**
-	 * @deprecated
-	 * @return the varnode bank for this syntax tree
-	 */
-	@Deprecated
-	public VarnodeBank getVbank() {
-		return vbank;
-	}
-
 	public ArrayList<PcodeBlockBasic> getBasicBlocks() {
 		return bblocks;
 	}
@@ -321,33 +276,6 @@ public class PcodeSyntaxTree implements PcodeFactory {
 	}
 
 	@Override
-	public Varnode createFromStorage(Address addr,VariableStorage storage, int logicalSize) {
-		Varnode[] pieces = storage.getVarnodes();
-
-		// This is the most common case, 1 piece, and address is pulled from the piece
-		if ((pieces.length == 1) && (addr == null)) {
-			Varnode vn = newVarnode(pieces[0].getSize(), pieces[0].getAddress());
-			return vn;
-		}
-
-		// Anything past here allocates varnode from the JOIN (VARIABLE) space.
-		// addr should be non-null ONLY if it is in the JOIN space
-		try {
-			if (addr == null) {		// addr can still be null for join space varnode
-				long joinoffset = joinAllocate;				// Next available offset
-				storage = allocateJoinStorage(-1, pieces);	// is allocated from JOIN space
-				addr = AddressSpace.VARIABLE_SPACE.getAddress(joinoffset);
-			} else {
-				storage = allocateJoinStorage(addr.getOffset(), pieces);
-			}
-		} catch (InvalidInputException e) {
-			return null;
-		}
-		Varnode vn = newVarnode(logicalSize, addr);
-		return vn;
-	}
-
-	@Override
 	public Varnode setInput(Varnode vn, boolean val) {
 		if ((!vn.isInput()) && val) {
 			return vbank.setInput(vn);
@@ -359,7 +287,7 @@ public class PcodeSyntaxTree implements PcodeFactory {
 	}
 
 	private void buildVarnodeRefs() {
-		refmap = new HashMap<Integer, Varnode>((int) (1.5 * vbank.size()));
+		refmap = new HashMap<>((int) (1.5 * vbank.size()));
 		Iterator<?> iter = vbank.locRange();			// Iterate over all varnodes
 		while (iter.hasNext()) {
 			VarnodeAST vn = (VarnodeAST) iter.next();
@@ -404,13 +332,18 @@ public class PcodeSyntaxTree implements PcodeFactory {
 	}
 
 	@Override
+	public void setVolatile(Varnode vn, boolean val) {
+		// Currently we don't set anything directly on the Varnode
+	}
+
+	@Override
 	public void setMergeGroup(Varnode vn, short val) {
 		VarnodeAST vnast = (VarnodeAST) vn;
 		vnast.setMergeGroup(val);
 	}
 
 	private void buildOpRefs() {
-		oprefmap = new HashMap<Integer, PcodeOp>((int) (1.5 * opbank.size()));
+		oprefmap = new HashMap<>((int) (1.5 * opbank.size()));
 		Iterator<?> iter = opbank.allOrdered();
 		while (iter.hasNext()) {
 			PcodeOp op = (PcodeOp) iter.next();
@@ -447,8 +380,7 @@ public class PcodeSyntaxTree implements PcodeFactory {
 	}
 
 	public void setOutput(PcodeOp op, Varnode vn) {
-		if (vn == op.getOutput())
-		 {
+		if (vn == op.getOutput()) {
 			return;			// Output already set to this
 		}
 		if (op.getOutput() != null) {
@@ -464,8 +396,7 @@ public class PcodeSyntaxTree implements PcodeFactory {
 
 	public void unSetOutput(PcodeOp op) {
 		Varnode vn = op.getOutput();
-		if (vn == null)
-		 {
+		if (vn == null) {
 			return;		// Nothing to do
 		}
 		op.setOutput(null);
@@ -473,8 +404,7 @@ public class PcodeSyntaxTree implements PcodeFactory {
 	}
 
 	public void setInput(PcodeOp op, Varnode vn, int slot) {
-		if (slot >= op.getNumInputs())
-		 {
+		if (slot >= op.getNumInputs()) {
 			op.setInput(null, slot);					// Expand number of inputs as necessary
 		}
 		if (op.getInput(slot) != null) {
@@ -513,8 +443,7 @@ public class PcodeSyntaxTree implements PcodeFactory {
 	}
 
 	@Override
-	public PcodeOp newOp(SequenceNumber sq, int opc, ArrayList<Varnode> inputs, Varnode output)
-			throws UnknownInstructionException {
+	public PcodeOp newOp(SequenceNumber sq, int opc, ArrayList<Varnode> inputs, Varnode output) {
 		PcodeOp op = opbank.create(opc, inputs.size(), sq);
 		if (output != null) {
 			setOutput(op, output);
@@ -528,23 +457,30 @@ public class PcodeSyntaxTree implements PcodeFactory {
 		return op;
 	}
 
-	private void readVarnodeXML(XmlPullParser parser) throws PcodeXMLException {
-		XmlElement el = parser.start("varnodes");
-		while (parser.peek().isStart()) {
-			Varnode.readXML(parser, this);
+	private void decodeVarnode(Decoder decoder) throws DecoderException {
+		int el = decoder.openElement(ELEM_VARNODES);
+		for (;;) {
+			int subId = decoder.peekElement();
+			if (subId == 0) {
+				break;
+			}
+			Varnode.decode(decoder, this);
 		}
-		parser.end(el);
+		decoder.closeElement(el);
 	}
 
-	private void readBasicBlockXML(XmlPullParser parser, BlockMap resolver)
-			throws PcodeXMLException {
-		XmlElement el = parser.start("block");
+	private void decodeBasicBlock(Decoder decoder, BlockMap resolver) throws DecoderException {
+		int el = decoder.openElement(ELEM_BLOCK);
 		int order = 0;
 		PcodeBlockBasic bl = new PcodeBlockBasic();
-		bl.restoreXmlHeader(el);
-		bl.restoreXmlBody(parser, resolver);
-		while (parser.peek().isStart()) {
-			PcodeOp op = PcodeOp.readXML(parser, this);
+		bl.decodeHeader(decoder);
+		bl.decodeBody(decoder, resolver);
+		for (;;) {
+			int subel = decoder.peekElement();
+			if (subel == 0) {
+				break;
+			}
+			PcodeOp op = PcodeOp.decode(decoder, this);
 			op.setOrder(order);
 			order += 1;
 			bl.insertEnd(op);
@@ -554,37 +490,43 @@ public class PcodeSyntaxTree implements PcodeFactory {
 			bblocks.add(null);
 		}
 		bblocks.set(index, bl);
-		parser.end(el);
+		decoder.closeElement(el);
 	}
 
-	private void readBlockEdgeXML(XmlPullParser parser) throws PcodeXMLException {
-		XmlElement el = parser.start("blockedge");
-		int blockInd = SpecXmlUtils.decodeInt(el.getAttribute("index"));
+	private void decodeBlockEdge(Decoder decoder) throws DecoderException {
+		int el = decoder.openElement(ELEM_BLOCKEDGE);
+		int blockInd = (int) decoder.readSignedInteger(ATTRIB_INDEX);
 		PcodeBlockBasic curBlock = bblocks.get(blockInd);
-		while (parser.peek().isStart()) {
-			curBlock.restoreNextInEdge(parser, bblocks);
+		for (;;) {
+			int subel = decoder.peekElement();
+			if (subel == 0) {
+				break;
+			}
+			curBlock.decodeNextInEdge(decoder, bblocks);
 		}
-		parser.end(el);
+		decoder.closeElement(el);
 	}
 
-	public void readXML(XmlPullParser parser) throws PcodeXMLException {
-		XmlElement el = parser.start("ast");
+	public void decode(Decoder decoder) throws DecoderException {
+		int el = decoder.openElement(ELEM_AST);
 		if (!vbank.isEmpty()) {
 			clear();
 		}
-		readVarnodeXML(parser);
+		decodeVarnode(decoder);
 		buildVarnodeRefs();										// Build the HashMap
 		BlockMap blockMap = new BlockMap(addrFactory);
-		while (parser.peek().isStart()) {
-			XmlElement subel = parser.peek();
-			if (subel.getName().equals("block")) {
-				readBasicBlockXML(parser, blockMap);		// Read a basic block and all its PcodeOps				
+		for (;;) {
+			int subel = decoder.peekElement();
+			if (subel == 0) {
+				break;
+			}
+			else if (subel == ELEM_BLOCK.id()) {
+				decodeBasicBlock(decoder, blockMap);		// Read a basic block and all its PcodeOps				
 			}
 			else {
-				readBlockEdgeXML(parser);
+				decodeBlockEdge(decoder);
 			}
 		}
-		parser.end(el);
+		decoder.closeElement(el);
 	}
-
 }
